fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body {
   padding-top: 3em;
   font-weight: bold;
   color: white;
+  text-align: center;
 }
 
 .score {
